[package]
name = "tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] } # Add features you need
tokio = { version = "1", features = ["macros"] }
vercel_runtime = "0.1" # Use the appropriate version

[[bin]]
name = "api"
path = "api/handler.rs"